# agentic-rag-green

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  sample.env
.github/workflows/: ci.yml  publish.yml
agentic_rag/: __init__.py  config.py
agentic_rag/components/: __init__.py  neo4j_manager.py  registry.py  secrets.py
agentic_rag/components/chunkers/: __init__.py  markdown_aware_chunker.py  semantic_chunker.py
agentic_rag/components/converters/: __init__.py  marker_pdf_converter.py  markitdown_pdf_converter.py
agentic_rag/components/evaluators/: __init__.py  answer_quality_evaluator.py  answer_structure_evaluator.py  bleu_evaluator.py  coherence_evaluator.py  communication_quality_evaluator.py  fact_matching_evaluator.py  gold_standard_evaluator.py  longqa_answer_evaluator.py  meteor_evaluator.py  morqa_faithfulness_evaluator.py  readability_evaluator.py  reference_free_evaluator.py  rouge_evaluator.py
agentic_rag/components/evaluators/prompts/: answer_quality.txt  communication_quality.txt  fact_extraction.txt  longqa_answer.txt
agentic_rag/components/gates/: __init__.py  gated_component.py  ingate.py  outgate.py
agentic_rag/components/generators/: __init__.py  openrouter_generator.py
agentic_rag/pipeline/: README.md  __init__.py  builder.py  factory.py  graph_builder.py  manager.py  runner.py  storage.py
agentic_rag/types/: __init__.py  component_enums.py  component_mappings.py  component_spec.py  data_types.py  graph_relationships.py  node_types.py  pipeline_spec.py
agentic_rag/utils/: __init__.py  ipfs_client.py  logger.py  metrics.py
examples/: README.md  __init__.py  async_indexing_pipeline_example.py  async_qdrant_indexing_example.py  async_qdrant_retrieval_example.py  async_retrieval_pipeline_example.py  create_sample_data.py  indexing_pipeline_example.py  retrieval_pipeline_example.py
issues/: README.md
issues/document-store-duplication/: README.md
issues/multi-store-retrieval-pipeline/: README.md
issues/retrieval-pipeline-branching/: README.md
src/: __init__.py  agent.py  environment.py  executor.py  messenger.py  models.py  server.py
tests/: __init__.py  conftest.py  test_chroma_rag_pipeline.py  test_core_functionality.py  test_custom_components_pipeline.py  test_graph_pipeline.py  test_init.py  test_marker_rag_pipeline.py  test_pipeline_creation.py  test_pipeline_runner.py  test_pipeline_runner_integration.py
tests/components/: __init__.py
tests/components/chunkers/: __init__.py  test_markdown_aware_chunker.py  test_semantic_chunker.py
tests/components/converters/: __init__.py  test_marker_pdf_converter.py  test_markitdown_pdf_converter.py
tests/components/evaluators/: __init__.py  test_answer_quality_evaluator.py  test_answer_structure_evaluator.py  test_bleu_evaluator.py  test_coherence_evaluator.py  test_communication_quality_evaluator.py  test_fact_matching_evaluator.py  test_longqa_answer_evaluator.py  test_meteor_evaluator.py  test_morqa_faithfulness_evaluator.py  test_readability_evaluator.py  test_rouge_evaluator.py
tests/components/gates/: __init__.py  test_gated_component.py
tests/components/generators/: __init__.py  test_openrouter_generator.py
