[tool.poetry]
name = "agentic-rag-green"
version = "0.1.0"
description = "Green Agent for RAG Evaluation Benchmark - AgentBeats Competition"
authors = ["Vardhan Shorewala <vardhanshorewala@berkeley.edu>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# A2A Protocol SDK with HTTP server support
a2a-sdk = {version = ">=0.2.0", extras = ["http-server"]}

# Server dependencies
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
python-multipart = ">=0.0.9"

# Neo4j and utils
neo4j = ">=5.0.0"
certifi = ">=2024.0.0"
python-dotenv = ">=1.0.0"

# Agentic RAG library - as submodule
agentic-rag = {path = "./agentic-rag", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.23.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
