[project]
name = "agentic-rag-green"
version = "0.1.0"
description = "Green Agent for RAG Evaluation Benchmark - AgentBeats Competition"
authors = [
    {name = "Vardhan Shorewala", email = "vardhanshorewala@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
# A2A Protocol SDK with HTTP server support
    "a2a-sdk[http-server]>=0.2.0",

# Server dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",

# Neo4j and utils
    "neo4j>=5.0.0",
    "certifi>=2024.0.0",
    "python-dotenv>=1.0.0",

    # Agentic RAG library (local)
    "agentic-rag",
]

[tool.uv.sources]
agentic-rag = { path = "./agentic-rag", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
